RESOLVED FIXED177594
[iOS WK2] DataTransfer DataInteractionTests hit debug assertions under -_preLoadedDataConformingToType:forItemProviderAtIndex:
https://bugs.webkit.org/show_bug.cgi?id=177594
Summary [iOS WK2] DataTransfer DataInteractionTests hit debug assertions under -_preL...
Wenson Hsieh
Reported 2017-09-27 23:48:15 PDT
These tests were added in r222595.
Attachments
Patch (3.77 KB, patch)
2017-09-28 00:26 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2017-09-28 00:26:40 PDT
Wenson Hsieh
Comment 2 2017-09-28 07:19:55 PDT
Comment on attachment 322069 [details] Patch Thanks Tim!
WebKit Commit Bot
Comment 3 2017-09-28 07:48:03 PDT
Comment on attachment 322069 [details] Patch Clearing flags on attachment: 322069 Committed r222608: <http://trac.webkit.org/changeset/222608>
WebKit Commit Bot
Comment 4 2017-09-28 07:48:04 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2017-09-28 07:49:11 PDT
Wenson Hsieh
Comment 6 2017-09-28 07:53:52 PDT
*** Bug 177599 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.